force-app/main/default/objects/Dated_Pricing_Unit__c/Dated_Pricing_Unit__c.object-meta.xml
<CustomObject>
    <label>Dated Pricing Unit</label>
    <nameField>
        <displayFormat>DPU-{00000000}</displayFormat>
        <label>Dated Pricing Unit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dated Pricing Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>