force-app/main/default/objects/Dated_Pricing_Unit__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Dated Pricing Units</relationshipLabel>
    <relationshipName>Dated_Pricing_Units</relationshipName>
    <type>Lookup</type>
</CustomField>