force-app/main/default/objects/Dated_Pricing_Unit__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>R&amp;R New</fullName>
            </value>
            <value>
                <fullName>R&amp;R Renewal</fullName>
            </value>
            <value>
                <fullName>B&amp;E</fullName>
            </value>
            <value>
                <fullName>Index to Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>