force-app/main/default/objects/Dated_Pricing_Unit__c/fields/Unit_Of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_Of_Measure__c</fullName>
    <label>Unit Of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GJ</fullName>
            </value>
            <value>
                <fullName>kwh</fullName>
            </value>
            <value>
                <fullName>m3</fullName>
            </value>
            <value>
                <fullName>Therms</fullName>
            </value>
            <value>
                <fullName>DTH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>