force-app/main/default/objects/Dated_Pricing_Unit__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>